--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
             </div>
 
-            <div id="formulário">
+            <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja Bem vindo/a novamnente. Faça login para acessar sua conta e poder fazer configurções no seu ambiente. </p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
         </section>
